examples/negative/type_errors/L2/7_bool_upper_limit_for.ob
MODULE BoolUpLimFor;

VAR x,y: INTEGER;

BEGIN
  x := 42;
  FOR y := 0 TO TRUE DO
    x := x + 1
  END
END BoolUpLimFor.
